olympics-fe-demo.yaml


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: efedorenko
  name: olympics-dsh-fe
  labels:
    run: olympics-dsh-fe
    delta: f
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: olympics-dsh-fe
    spec:
      containers:
      - image: eugeneflexagon/olympics-dsh-fe:latest
        imagePullPolicy: Always
        name: olympics-dsh-fe
        ports:
        - containerPort: 80
          protocol: TCP
