olympics-fe1.yaml


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: olympics-feblue
  namespace: efedorenko
  labels:
    run: olympics-fe
    version: blue    
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: olympics-fe
        version: blue
    spec:
      containers:
      - image: eugeneflexagon/olympics-fe:1.0.94
      
        imagePullPolicy: Always
        name: olympics-fe
        ports:
        - containerPort: 80
          protocol: TCP
