olympics-fe2.yaml


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: efedorenko
  labels:
    run: olympics-fe
    version: green
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: olympics-fe
        version: green
    spec:
      containers:
      - image: eugeneflexagon/olympics-fe:1.0.100
        imagePullPolicy: Always
        name: olympics-fe
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: olympics-fe-svc
  namespace: efedorenko
spec:
  selector:
    run: olympics-fe
    version: green
  ports:
    - port: 8088
      targetPort: 80
  type: NodePort
