olympics-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: olympics-ing
  namespace: efedorenko
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /efedorenko/javabackend
        backend:
          serviceName: olympics-mw-svc
          servicePort: 8088      
      - path: /efedorenko/olympics
        backend:
          serviceName: olympics-fe-svc
          servicePort: 8088
